hphp/hack/test/extended_reasons/intersection_subtyping.php.exp
error: Typing[4110] Invalid return type [1]
-> Expected I [2]
-> But got C [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this hint [5]
-> which itself flows into this hint, via the intersection type [2]

intersection_subtyping.php:9:10
          6 | class C extends A {}
          7 | 
[2,3,4,5] 8 | function inter_r(C $c) : (A & I) {
[1]       9 |   return $c;
         10 | }
         11 | 

error: Typing[4110] Invalid return type [1]
-> Expected C [2]
-> But got (A & I) [3]
-> Here's why: this hint [3]
-> flows into this expression [4]
-> which itself flows into this expression [5]
-> which itself flows into this expression [6]
-> which itself flows into this expression [1]
-> which itself flows into this expression [1]
-> which itself flows into this hint [2]

intersection_subtyping.php:14:10
        10 | }
        11 | 
[2,3,4] 12 | function inter_l((A & I) $ai): C {
[5,6]   13 |   $c = $ai;
[1]     14 |   return $c;
        15 | }

2 errors found.
